changed h1 back to black as white on yellow may of had issues with contrast

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -14,7 +14,6 @@ body {
 
 body h1 {
     font-family: 'Poppins', sans-serif;
-    color: var(--white);
 }
 
 .create-recipe-container {
